XP-4748 AppBar - Enable configurable tabMenu * Fixed flickering of the launcher button in the Content Studio * Removed opacity transition * Removed obsolete styling

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/appbar.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/appbar.less
@@ -56,12 +56,6 @@
       }
     }
   }
-
-  .launcher-button {
-    opacity: 0;
-    position: fixed;
-    right: 6px;
-  }
 }
 
 ._0-240, ._240-360, ._360-540 {
